--- a/style.css
+++ b/style.css
@@ -379,3 +379,77 @@
                     align-items: center;
                     color: #000000;
                 }
+                /*PAGINA BLOG*/
+                
+                #blog {
+                    max-width: 1440px;
+                    width: 80%;
+                }
+                
+                #banner-blog {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-evenly
+                }
+                
+                #titulo-blog h1 {
+                    font-weight: bold;
+                    font-size: 47px;
+                    color: #009688;
+                }
+                
+                #titulo-blog p {
+                    font-weight: 300;
+                    font-size: 20px;
+                    color: #000000;
+                    text-align: left;
+                    width: 60%;
+                    margin-top: 40px;
+                }
+                
+                #materias-blog {
+                    display: flex;
+                    justify-content: space-around;
+                    width: 80%;
+                    gap: 50px;
+                }
+                
+                #materias-blog-2 {
+                    display: flex;
+                    justify-content: space-around;
+                    width: 80%;
+                    gap: 50px;
+                }
+                
+                #materias-blog-3 {
+                    display: flex;
+                    justify-content: space-around;
+                    width: 80%;
+                    gap: 50px;
+                }
+                
+                .card-blog {
+                    display: block;
+                }
+                
+                .card-blog img {
+                    width: 95%;
+                    margin-bottom: 20px
+                }
+                
+                .card-blog h2 a {
+                    text-decoration: none;
+                    cursor: pointer;
+                    font-weight: 500;
+                    font-size: 30px;
+                    color: #FF4081;
+                }
+                
+                .card-blog p {
+                    width: 90%;
+                    text-align: justify;
+                    margin-top: 20px;
+                    font-weight: 300;
+                    font-size: 17px;
+                    color: #000000;
+                }
