--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
                 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@300&family=Ubuntu:wght@500&display=swap');
-                @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Nunito:wght@300&family=Roboto:wght@300&family=Ubuntu:wght@400;700&display=swap');
                 * {
                     margin: 0;
                     padding: 0;
@@ -127,7 +126,6 @@
                 }
                 
                 #depoimento-titulo h3 {
-                    font-family: "Nunito", sans-serif;
                     font-size: 37px;
                     color: #009688;
                     margin-left: 11%;
@@ -506,4 +504,58 @@
                     border-radius: 50px;
                     width: 30%;
                     padding: 10px 8px;
+                }
+                /*PAGINA POSTS*/
+                
+                #titulo-post h1 {
+                    font-weight: 500;
+                    font-size: 50px;
+                    line-height: 57px;
+                    display: flex;
+                    justify-content: center;
+                    color: #FF4081;
+                }
+                
+                #titulo-post p {
+                    font-weight: 300;
+                    font-size: 18px;
+                    display: flex;
+                    justify-content: center;
+                    color: #9D9D9D;
+                }
+                
+                #imagem-post {
+                    display: flex;
+                    justify-content: center;
+                    width: 145vh;
+                }
+                
+                #texto-post {
+                    width: 90vw;
+                    text-align: left;
+                }
+                
+                #texto-post h2 {
+                    font-weight: bold;
+                    font-size: 27px;
+                    line-height: 31px;
+                    color: #009688;
+                    margin-bottom: 2vw;
+                }
+                
+                #texto-post p {
+                    font-weight: 300;
+                    font-size: 18px;
+                    line-height: 21px;
+                    font-feature-settings: 'kern' off;
+                    color: #000000;
+                    margin-bottom: 5vw;
+                }
+                
+                #opcao-curso h1 {
+                    font-weight: 500;
+                    font-size: 50px;
+                    display: flex;
+                    justify-content: center;
+                    color: #FF4081;
                 }
